[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microfarm_pki"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "sch@treegital.fr"},
]
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "aio-pika",
    "aiozmq",
    "cryptography",
    "minicli",
    "msgpack",
    "ormsgpack",
    "peewee",
    "peewee_aio[aiosqlite]",
    "tomli",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "testing.rabbitmq",
]

[project.scripts]
mfpki_service = "microfarm_pki.service:run"
mfpki_worker = "microfarm_pki.worker:run"

[tool.setuptools.packages.find]
where = ["."]
