[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microfarm_pki"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "sch@treegital.fr"},
]
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "aio-pika",
    "aiozmq",
    "cryptography",
    "minicli",
    "msgpack",
    "ormsgpack",
    "peewee",
    "peewee_aio[aiosqlite]",
    "tomli",
    "freezegun"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "testing.rabbitmq",
  "pyhamcrest",
  "freezegun"
]

[project.scripts]
mfpki = "microfarm_pki:run"

[tool.setuptools.packages.find]
where = ["."]
